--- a/Calculator.Controls/Brackets.xaml
+++ b/Calculator.Controls/Brackets.xaml
@@ -9,7 +9,7 @@
     <UserControl.Resources>
         <ControlTemplate x:Key="BracketsTemplate" TargetType="local:Brackets">
             <AdornerDecorator>
-                <Canvas DataContext="{Binding ElementName=This}" Background="AliceBlue">
+                <Canvas DataContext="{Binding ElementName=This}">
                     <ContentPresenter Content="{Binding Left}" Canvas.Left="{Binding LeftX}" RenderTransform="{Binding LeftTransform}" />
                     <ContentPresenter Content="{Binding Content}" Canvas.Left="{Binding ContentX}" />
                     <ContentPresenter Content="{Binding Right}" Canvas.Left="{Binding RightX}" RenderTransform="{Binding RightTransform}" />
