--- a/Calculator.Keypad/Keypad.xaml
+++ b/Calculator.Keypad/Keypad.xaml
@@ -7,7 +7,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
-             d:DesignHeight="240" d:DesignWidth="240" FontSize="26" Template="{DynamicResource KeypadTemplate}">
+             d:DesignHeight="240" d:DesignWidth="320" FontSize="26" Template="{DynamicResource KeypadTemplate}">
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="KeyUp">
             <i:InvokeCommandAction Command="{Binding KeyUpCommand}"/>
@@ -25,6 +25,7 @@
                         <ColumnDefinition Width="80" />
                         <ColumnDefinition Width="80" />
                         <ColumnDefinition Width="80" />
+                        <ColumnDefinition Width="80" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="60" />
@@ -33,31 +34,38 @@
                         <RowDefinition Height="60" />
                     </Grid.RowDefinitions>
                     <Button Grid.Row="0" Grid.Column="0" Width="60" Height="40" Content="=" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
-                    <Button Grid.Row="0" Grid.Column="1" Width="60" Height="40" Content="trig" Style="{StaticResource MaterialDesignRaisedDarkButton}" Command="{Binding OpenTrigDialogCommand}" />
+                    <Button Grid.Row="0" Grid.Column="1" Width="60" Height="40" Content="trig" ToolTip="{x:Static local:Translations.TrigonometricFunctions}" Style="{StaticResource MaterialDesignRaisedAccentButton}" Command="{Binding OpenTrigDialogCommand}" />
                     <Button Grid.Row="0" Grid.Column="2" Width="60" Height="40" Content="7" />
                     <Button Grid.Row="0" Grid.Column="3" Width="60" Height="40" Content="8" />
                     <Button Grid.Row="0" Grid.Column="4" Width="60" Height="40" Content="9" />
-                    <Button Grid.Row="0" Grid.Column="5" Width="60" Height="40" Content="x²" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
-                    <Button Grid.Row="0" Grid.Column="6" Width="60" Height="40" Content="√" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="0" Grid.Column="5" Width="60" Height="40" Content="x²" ToolTip="Exponentials" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="0" Grid.Column="6" Width="60" Height="40" Content="√" ToolTip="Roots" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="0" Grid.Column="7" Width="60" Height="40" Content="∫x" ToolTip="Analysis" Style="{StaticResource MaterialDesignRaisedAccentButton}" />
 
-                    <Button Grid.Row="1" Grid.Column="0" Width="60" Height="40" Content="{}{" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
-                    <Button Grid.Row="1" Grid.Column="1" Width="60" Height="40" Content="}" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="1" Grid.Column="0" Width="60" Height="40" Content="π" ToolTip="{x:Static local:Translations.MathematicalConstants}" Style="{StaticResource MaterialDesignRaisedAccentButton}" />
+                    <Button Grid.Row="1" Grid.Column="1" Width="60" Height="40" Content="SI" ToolTip="{x:Static local:Translations.PhysicalUnits}" Style="{StaticResource MaterialDesignRaisedAccentButton}" />
                     <Button Grid.Row="1" Grid.Column="2" Width="60" Height="40" Content="4" />
                     <Button Grid.Row="1" Grid.Column="3" Width="60" Height="40" Content="5" />
                     <Button Grid.Row="1" Grid.Column="4" Width="60" Height="40" Content="6" />
                     <Button Grid.Row="1" Grid.Column="5" Width="60" Height="40" Content="×" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
                     <Button Grid.Row="1" Grid.Column="6" Width="60" Height="40" Content="÷" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="1" Grid.Column="7" Width="60" Height="40" ToolTip="Vectors and Matrices" Style="{StaticResource MaterialDesignRaisedAccentButton}">
+                        <Button.Content>
+                            <TextBlock Text="M" FontWeight="Bold" />
+                        </Button.Content>
+                    </Button>
 
-                    <Button Grid.Row="2" Grid.Column="0" Width="60" Height="40" Content="[" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
-                    <Button Grid.Row="2" Grid.Column="1" Width="60" Height="40" Content="]" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="2" Grid.Column="0" Width="60" Height="40" Content="ℝ" ToolTip="{x:Static local:Translations.MathematicalSets}" Style="{StaticResource MaterialDesignRaisedAccentButton}" Command="{Binding OpenSetsDialogCommand}" />
+                    <Button Grid.Row="2" Grid.Column="1" Width="60" Height="40" Content="K" ToolTip="{x:Static local:Translations.PhysicalConstants}" Style="{StaticResource MaterialDesignRaisedAccentButton}" />
                     <Button Grid.Row="2" Grid.Column="2" Width="60" Height="40" Content="1" />
                     <Button Grid.Row="2" Grid.Column="3" Width="60" Height="40" Content="2" />
                     <Button Grid.Row="2" Grid.Column="4" Width="60" Height="40" Content="3" />
                     <Button Grid.Row="2" Grid.Column="5" Width="60" Height="40" Content="+" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
                     <Button Grid.Row="2" Grid.Column="6" Width="60" Height="40" Content="-" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="2" Grid.Column="7" Width="60" Height="40" Content="f(x)" ToolTip="Mathematical Functions" Style="{StaticResource MaterialDesignRaisedAccentButton}" />
 
-                    <Button Grid.Row="3" Grid.Column="0" Width="60" Height="40" Content="(" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
-                    <Button Grid.Row="3" Grid.Column="1" Width="60" Height="40" Content=")" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="3" Grid.Column="0" Width="60" Height="40" Content="abc" Style="{StaticResource MaterialDesignRaisedAccentButton}" />
+                    <Button Grid.Row="3" Grid.Column="1" Width="60" Height="40" Content="(a)" ToolTip="{x:Static local:Translations.Brackets}" Style="{StaticResource MaterialDesignRaisedAccentButton}" />
                     <Button Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="2" Width="140" Height="40" Content="0" />
                     <Button Grid.Row="3" Grid.Column="4" Width="60" Height="40" Content="." />
                     <Button Grid.Row="3" Grid.Column="5" Grid.ColumnSpan="2" Width="140" Height="40" Content="Enter" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
