--- a/Calculator.Controls/Root.xaml
+++ b/Calculator.Controls/Root.xaml
@@ -10,9 +10,9 @@
         <ControlTemplate x:Key="RootTemplate" TargetType="local:Root">
             <AdornerDecorator>
                 <Canvas DataContext="{Binding ElementName=This}">
-                    <ContentPresenter Content="{TemplateBinding Index}" RenderTransform="{Binding IndexTransform}" />
-                    <Polyline Points="{TemplateBinding Points}" StrokeEndLineCap="Flat" StrokeLineJoin="Round" Stroke="{Binding Foreground}" StrokeThickness="1" />
-                    <ContentPresenter Content="{TemplateBinding Content}" Canvas.Left="{Binding ContentX}" Canvas.Top="{Binding ContentY}" />
+                    <ContentPresenter Content="{Binding Index}" RenderTransform="{Binding IndexTransform}" />
+                    <Polyline Points="{Binding Points}" StrokeEndLineCap="Flat" StrokeLineJoin="Round" Stroke="{Binding Foreground}" StrokeThickness="{Binding LineThickness}" />
+                    <ContentPresenter Content="{Binding Content}" Canvas.Left="{Binding ContentX}" Canvas.Top="{Binding ContentY}" />
                 </Canvas>
             </AdornerDecorator>
         </ControlTemplate>
