--- a/Calculator.Controls/Parentheses.xaml
+++ b/Calculator.Controls/Parentheses.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Calculator.Controls.Pow"
+﻿<UserControl x:Class="Calculator.Controls.Parentheses"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,8 +9,9 @@
         <ControlTemplate TargetType="UserControl">
             <AdornerDecorator DataContext="{Binding ElementName=This}" Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}">
                 <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}">
-                    <ContentPresenter Content="{Binding Exponent}" Canvas.Left="{Binding ExponentX}" RenderTransform="{Binding ExponentTransform}" />
-                    <ContentPresenter Content="{Binding Content}" Canvas.Top="{Binding ContentY}" />
+                    <Path Canvas.Left="0" Canvas.Top="0" Data="{Binding LeftBracket}" StrokeEndLineCap="Flat" StrokeLineJoin="Round" Stroke="{Binding Foreground}" StrokeThickness="{Binding StrokeThickness}" />
+                    <ContentPresenter Canvas.Left="{Binding ContentX}" Canvas.Top="0" />
+                    <Path Canvas.Left="{Binding RightBracketX}" Canvas.Top="0" Data="{Binding RightBracket}" StrokeEndLineCap="Flat" StrokeLineJoin="Round" Stroke="{Binding Foreground}" StrokeThickness="{Binding StrokeThickness}" />
                 </Canvas>
             </AdornerDecorator>
         </ControlTemplate>
